--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
     compile group: 'com.h2database', name: 'h2', version: '1.4.197'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.0+'
+    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '8.0+'
+    compile group: 'org.eclipse.jetty', name: 'jetty-plus', version: '8.0+'
 }
 
 jar {
