--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,20 @@ repositories {
 }
 
 dependencies {
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    
     compile group: 'com.h2database', name: 'h2', version: '1.4.197'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.0+'
     compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '8.0+'
     compile group: 'org.eclipse.jetty', name: 'jetty-plus', version: '8.0+'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'
+    compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.6.1'
+    compile group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.6.1'
 }
 
 jar {
