moved java sources from default package to org/tmw

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -2,12 +2,12 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
     <listener>
-        <listener-class>JavaUtilLoggerRedirector</listener-class>
+        <listener-class>org.tmw.JavaUtilLoggerRedirector</listener-class>
     </listener>
 
     <filter>
         <filter-name>RequestLogFilter</filter-name>
-        <filter-class>RequestLogFilter</filter-class>
+        <filter-class>org.tmw.RequestLogFilter</filter-class>
     </filter>
 
     <filter-mapping>
