--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ plugins {
 }
 
 application {
-    mainClassName = 'IntervalUpdater'
+    mainClassName = 'org.tmw.AppLauncher'
 }
 
-group 'tmw.org'
+group 'org.tmw'
 version '1.0'
 
 sourceCompatibility = 1.8
@@ -19,11 +19,11 @@ repositories {
 }
 
 dependencies {
-    
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    
+
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
-    
+
     compile group: 'com.h2database', name: 'h2', version: '1.4.197'
 
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.0+'
@@ -33,12 +33,16 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'
     compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.6.1'
     compile group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.6.1'
+
+//    compile group: 'com.sun.jersey', name: 'jersey-core', version: '1.18'
+//    compile group: 'com.sun.jersey', name: 'jersey-server', version: '1.18'
+//    compile group: 'com.sun.jersey', name: 'jersey-json', version: '1.18'
 }
 
 jar {
     manifest {
         attributes(
-                'Main-Class': 'IntervalUpdater',
+                'Main-Class': 'AppLauncher',
         )
     }
 }
