remove "group" from build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ application {
     mainClassName = 'org.tmw.AppLauncher'
 }
 
-group 'org.tmw'
+//group 'org.tmw'
 version '1.0'
 
 sourceCompatibility = 1.8
