--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.6.1'
     compile group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.6.1'
 
-//    compile group: 'com.sun.jersey', name: 'jersey-core', version: '1.18'
-//    compile group: 'com.sun.jersey', name: 'jersey-server', version: '1.18'
-//    compile group: 'com.sun.jersey', name: 'jersey-json', version: '1.18'
+    compile group: 'com.sun.jersey', name: 'jersey-core', version: '1.8'
+    compile group: 'com.sun.jersey', name: 'jersey-server', version: '1.8'
+    compile group: 'com.sun.jersey', name: 'jersey-json', version: '1.8'
 
 }
