--- a/build.gradle
+++ b/build.gradle
@@ -19,24 +19,24 @@ repositories {
 
 dependencies {
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit:4.12'
 
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    compile 'org.jsoup:jsoup:1.11.3'
 
-    compile group: 'com.h2database', name: 'h2', version: '1.4.197'
+    compile 'com.h2database:h2:1.4.197'
 
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.0+'
-    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '8.0+'
-    compile group: 'org.eclipse.jetty', name: 'jetty-plus', version: '8.0+'
+    compile 'org.eclipse.jetty:jetty-server:8.0+'
+    compile 'org.eclipse.jetty:jetty-webapp:8.0+'
+    compile 'org.eclipse.jetty:jetty-plus:8.0+'
 
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'
-    compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.6.1'
-    compile group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.6.1'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.10.0'
+    compile 'org.slf4j:jcl-over-slf4j:1.6.1'
+    compile 'org.slf4j:jul-to-slf4j:1.6.1'
 
-    compile group: 'com.sun.jersey', name: 'jersey-core', version: '1.8'
-    compile group: 'com.sun.jersey', name: 'jersey-server', version: '1.8'
-    compile group: 'com.sun.jersey', name: 'jersey-json', version: '1.8'
+    compile 'com.sun.jersey:jersey-core:1.8'
+    compile 'com.sun.jersey:jersey-server:1.8'
+    compile 'com.sun.jersey:jersey-json:1.8'
 
-    compile group: 'org.springframework', name: 'spring-beans', version: '4.0+'
-    compile group: 'org.springframework', name: 'spring-web', version: '4.0+'
+    compile 'org.springframework:spring-beans:4.0+'
+    compile 'org.springframework:spring-web:4.0+'
 }
