--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,11 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/spring.xml</param-value>
+        <param-value>src/main/webapp/WEB-INF/spring.xml</param-value>
     </context-param>
 
     <listener>
-        <listener-class>org.tmw.JavaUtilLoggerRedirector</listener-class>
+        <listener-class>org.tmw.web.JavaUtilLoggerRedirector</listener-class>
     </listener>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -15,7 +15,7 @@
 
     <filter>
         <filter-name>RequestLogFilter</filter-name>
-        <filter-class>org.tmw.RequestLogFilter</filter-class>
+        <filter-class>org.tmw.web.RequestLogFilter</filter-class>
     </filter>
 
     <filter-mapping>
